// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            image={
              Object {
                "uri": "https://lead1.io",
              }
            }
            imageRatio={1}
            showImage={true}
          >
            <View>
              <View>
                <Text
                  accessibilityLabel="Label 1"
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                accessibilityRole="heading"
                aria-level="3"
              >
                Headline 1
              </Text>
              <Text>
                <Text>
                  
                  Summary 1
                  ...
                </Text>
              </Text>
              <Text>
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
      <View>
        <View />
      </View>
    </View>
    <View>
      <Link
        url="https://article2.io"
      >
        <View>
          <Card
            image={
              Object {
                "uri": "https://lead2.io",
              }
            }
            imageRatio={1}
            showImage={true}
          >
            <View>
              <View>
                <Text
                  accessibilityLabel="Label 2"
                >
                  L A B E L   2
                </Text>
              </View>
              <Text
                accessibilityRole="heading"
                aria-level="3"
              >
                Headline 2
              </Text>
              <Text>
                <Text>
                  
                  Summary 2
                  ...
                </Text>
              </Text>
              <Text>
                Friday November 17 2017, 12:01am, The Sunday Times
              </Text>
              <Text>
                <Text>
                  Byline 2
                </Text>
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <ActivityIndicator
          animating={true}
          color="#DBDBDB"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. article list with no images 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            image={
              Object {
                "uri": "https://lead1.io",
              }
            }
            imageRatio={1}
            showImage={false}
          >
            <View>
              <View>
                <Text
                  accessibilityLabel="Label 1"
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                accessibilityRole="heading"
                aria-level="3"
              >
                Headline 1
              </Text>
              <Text>
                <Text>
                  
                  Short summary 1
                  ...
                </Text>
              </Text>
              <Text>
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <ActivityIndicator
          animating={true}
          color="#DBDBDB"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. a retry button when load more fails 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            image={
              Object {
                "uri": "https://lead1.io",
              }
            }
            imageRatio={1}
            showImage={true}
          >
            <View>
              <View>
                <Text
                  accessibilityLabel="Label 1"
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                accessibilityRole="heading"
                aria-level="3"
              >
                Headline 1
              </Text>
              <Text>
                <Text>
                  
                  Summary 1
                  ...
                </Text>
              </Text>
              <Text>
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <View>
          <Button
            title="Retry"
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. no footer with data equalling the count 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            image={
              Object {
                "uri": "https://lead1.io",
              }
            }
            imageRatio={1}
            showImage={true}
          >
            <View>
              <View>
                <Text
                  accessibilityLabel="Label 1"
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                accessibilityRole="heading"
                aria-level="3"
              >
                Headline 1
              </Text>
              <Text>
                <Text>
                  
                  Summary 1
                  ...
                </Text>
              </Text>
              <Text>
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View />
  </View>
</RCTScrollView>
`;

exports[`5. onviewed is called with changed items 1`] = `
Array [
  Array [
    Object {
      "viewed": true,
    },
    Array [
      Object {
        "headline": "Headline 1",
        "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
        "label": "Label 1",
        "leadAsset": Object {
          "__typename": "Image",
          "crop": Object {
            "__typename": "Crop",
            "url": "https://lead1.io",
          },
          "title": "Lead 1",
          "type": "Image",
        },
        "publicationName": "TIMES",
        "publishedTime": "2017-11-17T00:01:00.000Z",
        "section": "world",
        "shortSummary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Short summary 1",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "summary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Summary 1",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "url": "https://article1.io",
      },
      Object {
        "byline": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Byline 2",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "headline": "Headline 2",
        "id": "4e6894ec-cb18-11e7-b529-95e3fc05f40f",
        "label": "Label 2",
        "leadAsset": Object {
          "__typename": "Image",
          "crop": Object {
            "__typename": "Crop",
            "url": "https://lead2.io",
          },
          "title": "Lead 2",
          "type": "Image",
        },
        "publicationName": "SUNDAYTIMES",
        "publishedTime": "2017-11-17T00:01:00.000Z",
        "shortSummary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Short summary 2",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "summary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Summary 2",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "url": "https://article2.io",
      },
    ],
  ],
]
`;

exports[`6. removes the retry button when successfully pressed 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            image={
              Object {
                "uri": "https://lead1.io",
              }
            }
            imageRatio={1}
            showImage={true}
          >
            <View>
              <View>
                <Text
                  accessibilityLabel="Label 1"
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                accessibilityRole="heading"
                aria-level="3"
              >
                Headline 1
              </Text>
              <Text>
                <Text>
                  
                  Summary 1
                  ...
                </Text>
              </Text>
              <Text>
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <ActivityIndicator
          animating={true}
          color="#DBDBDB"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
